--- a/Page1.html
+++ b/Page1.html
@@ -6,14 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+    <header>Recreational Portfolio</header>
     <h1>make a difference</h1>
-</body>
+    <article>
+        <h3>Editing is a Vision</h3>
+         <p>It is the agreed upon opinion that editing can transform a movie direction. Indeed, many an editor have spoken about their experience in changing a movie's course. for example, Marvel developpers have praised their editing team for transcending the last 3 movies they produced, emphacizing on how challenging the raw material was.</p>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/TcMBFSGVi1c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </article>
 <footer>
-    <ul>
-        <li id="Page1"><a href="Page1.html"><h4 style="text-align: center;">Home</h4></a></li>
-        <li id="Page2"><a href="Page2.html"><h4 style="text-align: center;">Work</h4></a></li>
-        <li id="Page3"><a href="Page3.html"><h4 style="text-align: center;">Resume</h4></a></li>
-        <li id="Page4"><a href="Page4.html"><h4 style="text-align: center ;">Contact</h4></a></li>
-     </ul>
+  <a href="index.html"><h4 style="text-align: start;;">Main Page</h4></a>
+   <a href="Page1.html"><h4 style="text-align: start;">Home</h4></a>
+    <a href="Page2.html"><h4 style="text-align: start;">Work</h4></a>
+    <a href="Page3.html"><h4 style="text-align: start;">Resume</h4></a>
+    <a href="Page4.html"><h4 style="text-align: start ;">Contact</h4></a>
 </footer>
+</body>
 </html>
