--- a/Page2.html
+++ b/Page2.html
@@ -6,14 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+    <header>Recreational Portfolio Editing Samples</header>
+    <h4><i>Vortex</i></h4>
+    <p>Vortex is one of the first project our company founders worked on. as you can that was <i>four</i> years ago. we choose to show this as our main work because we want you as a client to see how far we have come and hence <b>how far we can still go ! </b></p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/6KFBUEmtF8k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+
+ <footer>
+     <nav>
+     <a href="index.html"><h4 style="text-align: center;">Main Page</h4></a>
+     <a href="Page1.html"><h4 style="text-align: center;">Home</h4></a>
+    <a href="Page2.html"><h4 style="text-align: center;">Work</h4></a>
+     <a href="Page3.html"><h4 style="text-align: center;">Resume</h4></a>
+    <a href="Page4.html"><h4 style="text-align: center ;">Contact</h4></a>
+    </nav>
+ </footer>
 </body>
-<footer>
-    <ul>
-        <li id="Page1"><a href="Page1.html"><h4 style="text-align: center;">Home</h4></a></li>
-        <li id="Page2"><a href="Page2.html"><h4 style="text-align: center;">Work</h4></a></li>
-        <li id="Page3"><a href="Page3.html"><h4 style="text-align: center;">Resume</h4></a></li>
-        <li id="Page4"><a href="Page4.html"><h4 style="text-align: center ;">Contact</h4></a></li>
-     </ul>
-</footer>
 </html>
