--- a/Page3.html
+++ b/Page3.html
@@ -6,29 +6,38 @@
     <title>Document</title>
 </head>
 <body>
-   <p><h3 style="text-align: center;">Different Artists with various skills</h3></p>
+    <header>Recreational Portfolio Contact</header>
+    <a href="index.html"><h4 style="text-align: start;">Main Page</h4></a>
+    <a href="Page1.html"><h4 style="text-align: start;">Home</h4></a>
+    <a href="Page2.html"><h4 style="text-align: start;">Work</h4></a>
+    <a href="Page3.html"><h4 style="text-align: start;">Resume</h4></a>
+    <a href="Page4.html"><h4 style="text-align: start ;">Contact</h4></a>
+    <p><h3 style="text-align: center;">Different Artists with various skills</h3></p>
    <table>
        <tr>
        <th>Video Makers</th>
-       <th style="color: lightslategray;">xavier Dolan</th>
+       </tr>
+       <tr>
+        <td style="color: lightslategray;">xavier Dolan</td>
        </tr>
        <tr>
        <th>Script Writers</th>
-       <th style="color: lightslategray;">Woody Allen</th>
+       </tr>
+       <tr>
+        <td style="color: lightslategray;">Woody Allen</td>
        </tr>
        <tr>
         <th>Colorists</th>
-        <th style="color: lightslategray;">SLim B.</th>
+        </tr>
+        <tr> 
+        <td style="color: lightslategray;">Tom Hardy</td>
         </tr>
 
    </table>
-</body>
-<footer>
-    <ul>
-        <li id="Page1"><a href="Page1.html"><h4 style="text-align: center;">Home</h4></a></li>
-        <li id="Page2"><a href="Page2.html"><h4 style="text-align: center;">Work</h4></a></li>
-        <li id="Page3"><a href="Page3.html"><h4 style="text-align: center;">Resume</h4></a></li>
-        <li id="Page4"><a href="Page4.html"><h4 style="text-align: center ;">Contact</h4></a></li>
-     </ul>
+   <footer>
+    <img src="https://lh3.googleusercontent.com/8_4ocsYAZMN0Ymy4qZYmy_FeaDLeOp1KDWciNoVjKjWHAOaamcVXHwkmFlUa3ucI-PfDh5r8FXXlir-yqz5d__aZNh45L3l_HyqhicCz1D6HLnTukNDAv8T3pDKXzjwj-_1fpgUELs1CZTYlHgcGbEXAiFDhutogXJMf19Xb34mEtk3kKU4hJr4IVrhjQYZFwYRo8ERy5hO-kzFP2YSp0ZAkw0Tz7-I1RKZS8ivx0E4C9ykR7k2Dw1IsSBpjDtFyG65m1PKaFYJO-jZqoqCAvI_yEmJ_QHqK-HeLXk527qSe2Mc1rUBX3hQgsfSP9zaRcLhk90ravYpgY2_riXZDcvhxGcKACBQ2E9JlP34oVTGr_HQa558m_fO9R9AMAMmXRWKmCI0NNN7G2ReOiiBHbeFpDshP0rNP8qSWlpOZ50kE6Y7NjDY-E9Aco5ysh80sm6dOkjLe_nfjVwll18vsgQwAQft0r66f9sYJ1NLawRwjdhfcgMFcwAiOjokgrCGYBn6eRTwR92ZKN4Noj2GEFsab_3mBIAimZ_mR-M2dAxwEErHDCuDDzZu6SyIsYY0BzZlx1J3TPrhHqYPKvrCz3lWJHvDayDFdH0E7-VoIKYOPCNP3lqOTigwsWw2TIC0WevaIUwiIcLOSptILAM-cTBfvuIuUhuB0KEHmYkz8lIK9k8He3XJ5wcuoWM7x=w624-h443-no?authuser=0"
+    alt="Recreational Logo" />
 </footer>
+</body>
+
 </html>
